refactor: 리뷰 도메인 레이어 수정